# mini_labelon_back

./: .env  .gitignore  .pre-commit-config.yml  README.md  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
