[project]
name = "mini_labelon_back"
version = "1.0.0"
description = "Backend for mini labelon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.3.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 80
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "tests/*"
]
lint.ignore = ["F401", "E402", "E501", "F403", "F405", "F811"]
lint.select = ["I", "E", "F", "W", "C90"]
